# klinkmonitor-native

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh  upgrade.sh
data/applications/: klinkmonitor-native.desktop
src/: Version.h.in  main.cpp
src/app/: App.cpp  App.h
src/database/: HistoryDb.cpp  HistoryDb.h
src/dialogs/: AboutDialog.cpp  AboutDialog.h  HistoryDialog.cpp  HistoryDialog.h  SettingsDialog.cpp  SettingsDialog.h  StatisticsDialog.cpp  StatisticsDialog.h
src/icons/: IconFactory.cpp  IconFactory.h
src/monitor/: InterfaceMonitor.cpp  InterfaceMonitor.h
src/settings/: Settings.cpp  Settings.h
src/tray/: Tray.cpp  Tray.h  Tray.h.orig
